header logo error

--- a/Reach Us.html
+++ b/Reach Us.html
@@ -84,7 +84,7 @@
               <li><a href="#form">GST Cancellation</a></li>
             </ul>
             <!-- Button -->
-            <a href="#" class="  ml-50"><img src="#" ></a> </div>
+            <a href="#" class="  ml-50"><img src="" ></a> </div>
           <!-- Nav End -->
         </div>
       </nav>
