Updated submit dialogue

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       body: data,
     })
     .then(() => {
-      alert("Success!");
+      alert("Your application submitted successfully! One of our GST experts will call you shortly.");
     })
   });
 });</script>
